@@ -52,7 +52,7 @@ public class Icon extends Texture {
 	public static final Icon isoSW = new Icon("iso-sw");
 	public static final Icon isoES = new Icon("iso-es");
 	public static final Icon wrench = new Icon("wrench");
-	public static final Texture redTorchOn = new Texture("redstone-torch-on");
+	public static final Icon redTorchOn = new Icon("redstone-torch-on");
 	public static final Icon map = new Icon("map");
 	public static final Icon mapSelected = new Icon("map-selected");
 	public static final Icon chunky = new Icon("chunky");
@@ -68,6 +68,11 @@ public class Icon extends Texture {
 	public static final Icon colors = new Icon("colors");
 	public static final Icon sky = new Icon("sky");
 	public static final Icon camera = new Icon("camera");
+    final public static Icon water = new Icon("water");
+    final public static Icon light = new Icon("light");
+    final public static Icon gear = new Icon("gear");
+    final public static Icon advanced = new Icon("advanced");
+    final public static Icon question = new Icon("question");
 
 	public Icon(String resourceName) {
 		setTexture(ImageLoader.get("icons/" + resourceName + ".png"));
